timer added, not working

--- a/index.html
+++ b/index.html
@@ -11,47 +11,45 @@
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-
 </head>
 
 <body>
-<div class="bg">
-    <div class="container">
-
-        <div class="row">
-            <div class="col-12">
-                <div id="welcome" class="jumbotron text-center bg-info text-light mt-5">
-                    <h1 class="display-4">Welcome to the quiz!</h1>
-                    <p class="lead">This text will change when you click the button</p>
-                    <p class="lead">
-                        <a class="startBtn btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-                    </p>
+    <div class="bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div id="welcome" class="jumbotron text-center bg-info text-light mt-5">
+                        <h1 class="display-4">Welcome to the quiz!</h1>
+                        <p  class="lead">This text will change when you click the button</p>
+                        <p class="lead">
+                            <a class="startBtn btn btn-primary btn-lg" href="#" role="button">Start quiz!</a>
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12 mb-3">
-                <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+            <div class="row">
+                <div class="col-12 mb-3">
+                    <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12 mb-3">
-                <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+            <div class="row">
+                <div class="col-12 mb-3">
+                    <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12 mb-3">
-                <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+            <div class="row">
+                <div class="col-12 mb-3">
+                    <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+            <div class="row">
+                <div class="col-12">
+                    <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+                </div>
             </div>
+           
         </div>
-
     </div>
-</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
