--- a/index.html
+++ b/index.html
@@ -5,46 +5,46 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>"The Office" Trivia Game</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
 
 <body>
     <div class="bg">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-12">
+                <div class="col-7 ml-5">
                     <div id="welcome" class="jumbotron text-center bg-info text-light mt-5">
-                        <h1 class="display-4">Welcome to the quiz!</h1>
-                        <p  class="lead">This text will change when you click the button</p>
+                        <h1 class="display-4 pb-2" style="font-size: 3em;">Welcome to "The Office" quiz!</h1>
+                        <h2  class="lead pb-4" style="font-size: 1.5em;">"You need to play to win. But you also need to win to play." - Michael Scott</h2>
                         <p class="lead">
-                            <a class="startBtn btn btn-primary btn-lg" href="#" role="button">Start quiz!</a>
+                            <a class="startBtn btn btn-primary btn-lg" style="size:2em; font-size: 1.5em;"href="#" role="button">Start quiz!</a>
                         </p>
-                    </div>
+                    </div> 
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 mb-3">
+                <div class="col-7 mb-3 ml-5">
                     <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 mb-3">
-                    <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+                    <div class="col-7 mb-3 ml-5">
+                            <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 mb-3">
-                    <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+                    <div class="col-7 mb-3 ml-5">
+                            <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
-                    <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
+                    <div class="col-7 mb-3 ml-5">
+                            <button type="button" class="answerBtn btn btn-dark btn-lg btn-block">Block level button</button>
                 </div>
             </div>
            
